--- a/src/thrones.Web/Views/Backbone/Index.cshtml
+++ b/src/thrones.Web/Views/Backbone/Index.cshtml
@@ -3,3 +3,10 @@
 }
 
 <h2>Backbone.js</h2>
+
+@section scripts {
+    <script src="@Url.Content("~/Scripts/app/thrones.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/lib/backbone/underscore.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/lib/backbone/backbone.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/app/backbone/app.js")" type="text/javascript"></script>
+}
